# rust-scaffold

./: .env.example  Cargo.toml  README.md
src/: config.rs  errors.rs  main.rs
src/auth/: extractor.rs  jwt.rs
src/handlers/: auth.rs  users.rs
src/middleware/: logging.rs
src/models/: user.rs
src/store/: memory.rs
